@@ -1,7 +1,7 @@
 #  File src/library/stats/R/stats-deprecated.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2013 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -24,5 +24,25 @@
 ##     names( object ) <- NULL
 ##     object
 ## }
+## </Entry>
+
+## <entry>
+## Deprecated in 3.1.0
+plclust <- function(tree, hang = 0.1, unit = FALSE, level = FALSE, hmin = 0,
+                    square = TRUE, labels = NULL, plot. = TRUE,
+                    axes = TRUE, frame.plot = FALSE, ann = TRUE,
+                    main = "", sub = NULL, xlab = NULL, ylab = "Height")
+{
+    .Deprecated("plot")
+    if(!missing(level) && level)	.NotYetUsed("level", error = FALSE)
+    if(!missing(hmin) && hmin != 0)	.NotYetUsed("hmin",  error = FALSE)
+    if(!missing(square) && !square)	.NotYetUsed("square",error = FALSE)
+    if(!missing(plot.) && !plot.)	.NotYetUsed("plot.", error = TRUE)
+    if(!missing(hmin)) tree$height <- pmax(tree$height, hmin)
+    if(unit) tree$height <- rank(tree$height)
+    plot.hclust(x = tree, labels = labels, hang = hang,
+                axes = axes, frame.plot = frame.plot, ann = ann,
+                main = main, sub = sub, xlab = xlab, ylab = ylab)
+}
 ## </Entry>
 
